fix(article): fixed prof title

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -30,7 +30,7 @@
 
 \title{Estudo relativo ao desempenho em função do consumo sobre alta demanda de dados em sistemas web desenvolvidos com \textit{Node.JS}}
 
-\author{Marcos Renan Krul\inst{1}, Renato Cristiano Ruppel\inst{1}, Prof. Dr. Adriano Ferrasa\inst{1}}
+\author{Marcos Renan Krul\inst{1}, Renato Cristiano Ruppel\inst{1}, Adriano Ferrasa\inst{1}}
 
 
 \address{Universidade Estadual de Ponta Grossa (UEPG)
