fix(article): fixed table cite

--- a/article/tcc.tex
+++ b/article/tcc.tex
@@ -774,10 +774,10 @@ acordo com a metodologia previamente descrita. Nesta seção, os dados coletados
 e as descobertas são discutidas à luz das questões de pesquisa estabelecidas. Os itens aqui apresentados representam o 
 resultado de análises rigorosas e constituem uma contribuição significativa para a compreensão do tópico em questão.
 
-A tabela \autoref{tab:metrics} apresenta a comparação dos valores de \textit{throughput} e tempo de resposta do servidor,
+Foram extraídos valores de \textit{throughput} e tempo de resposta do servidor,
 entre os três cenários estipulados, síncrono, assíncrono e assíncrono com uso de \textit{clusters}, quando confrontados
 com 12 requisições, sendo quatro simultâneas, até atingir o total de requisições. Todas as requisições realizam a leitura
-do arquivo de 1.65 \textit{gigabytes}. 
+do arquivo de 1.65 \textit{gigabytes} (\autoref{tab:metrics}). 
 
 É evidente que, assim como
 esperado, o cenário síncrono apresentou um \textit{throughput} inferior aos cenários assíncronos, ou seja, esta implementação
